<resources>
    <string name="app_name">English Zubrila</string>
    <string name="les_s_start">Welcome!</string>
    <string name="todo">TODO</string>
    <string name="title_activity_philip_chesterfield">PhilipChesterfield</string>
    <string name="_26_5_a_e_i_o_u_20_b_c_d_f_g_h_j_k_l_m_n_p_q_r_s_t_v_w_x_z_y"><![CDATA[Итак, в английском алфавите 26 букв, 5 из которых гласные – A, E, I, O, U затем 20 букв являются согласными – B C D F G H J K L M N P Q R S T V W X Z и только Y обозначает и согласный, и гласный звук! При изучении английского алфавита мы советуем Вам запоминать не только буквы, но и их звучание, это очень важно так как одна и та же буква в сочетании с согласной или гласной меняет свое звучание.]]></string>
    <string name="letters">Letters</string>
    <string name="spelling">Причины знать английский алфавит: Спеллинг — произношение слов по буквам (от англ. «spelling»).</string>
    <string name="email"> - Этот навык вам очень пригодится для того, чтобы продиктовать своё имя или email.</string>
    <string name="at_dot"> - При диктовке емейл адреса, обратите внимание на то, что знак «@» по-английски читается как «at», а точка – «dot».</string>
    <string name="hip"> - Знание порядка букв в алфавите поможет вам ориентироваться в словарях.</string>
    <string name="map"> - Безусловно, с появлением онлайн словарей, этот момент становится менее актуальным, но рано или поздно вы с этим все равно столкнетесь.</string>
    <string name="textview">tr</string>
    <string name="espandel">TextView</string>
    <string name="product">TextView</string>
    <string name="glav_transcriphyi">Ура мы добрались до транскрипций, Я могу вас поздравить!</string>
    <string name="elementary">Английская транскрипция: произношение букв и звуков на английском.</string>
    <string name="elementary_upper_intermediate">  <P>Транскрипция</P> английских букв — то, с чего начинается изучение английского языка. Абсолютно не важно, «Elementary» вы или «Upper–Intermediate», транскрипцию используют все, порой, даже неосознанно. Для начала давайте освежим в памяти, что означает фраза «английская транскрипция»?</string>
    <string name="transkriphii"><P> Это</P> последовательность фонетических символов, которая помогает нам понять, как прочитать тот или иной звук, слово. Зачастую студенты сталкиваются с транскрипцией в начале изучения языка, когда еще достаточно трудно читать даже довольно простые слова, а далее просто не обращают на нее внимание. Однако, так будет не вечно.</string>
    <string name="zagolovol">Транскрипция английского языка</string>
    <string name="km"> <P> Как</P> только студент начинает умело использовать сложные грамматические конструкции, и нарабатывает неплохой словарный запас для свободного общения, то тут же появляется желание говорить красиво, как носитель языка, то есть, совершенствовать свое произношение английских слов. Тут-то мы и вспоминаем старую добрую транскрипцию.</string>
    <string name="km1"> <P> Для</P> того, чтобы не пришлось вспоминать хорошо забытое старое, предлагаем время от времени возвращаться к повторению. Конечно, в идеале транскрипцию нужно проходить вместе с тичером, ведь на письме не передать все тонкости произношения, но если вы сейчас читаете эту статью, фундамент красивого произношения и правильного чтения уже заложен, и вы точно добьетесь желаемой цели.</string>
    <string name="zvuky">Транскрипция гласных звуков</string>
    <string name="glastnue"><P> Гласные</P> звуки бывают двух видов — одиночные звуки и дифтонги.</string>
    <string name="angldiftog">Английские дифтонги</string>
    <string name="zvuk">Дифтонг — звук, который состоит из двух звуков. Чаще всего, дифтонг можно разделить на два звука, однако, на письме это не передать. Зачастую дифтонги обозначаются не совокупностью нескольких знаков, а своим собственным знаком.</string>
    <string name="a_duck_cut_cat_a_car_hot_not"><P>1. Звук</P> «a» имеет четыре разновидности: [ ʌ ] – краткий звук, как в словах «duck», «cut»; [ æ ] – мягкий звук. Аналога ему нет в русском языке. Читается он, как в слове в слове «cat»; [ a: ] – долгий звук, который читается, как в слове «car»; [ ɔ ] – краткий звук, который звучит одновременно похоже и на «о», и на «а». В британском произношении, это скорее «о», как в слове «hot» или «not».</string>
    <string name="e_e_let_bird_fur_let_letter"> <P>2. Звук</P> «e» может читаться тремя способами: [ e ] – например, как в слове «let»; [ ə: ] – этот звук немного напоминает русскую букву «ё», только читается еще немного мягче. К примеру, «bird», «fur»; [ ə ] – один из наиболее распространенных звуков в английской транскрипции. По звучанию, этот звук похож на русский звук «э». Он стоит только в безударных слогах и бывает практически неслышен или неразличим, к примеру, [\'letə], «letter» — письмо.</string>
    <string name="i_i_film_i_sheep"><P>3. Звук</P> «i» может быть долгим и кратким: [ I ] – краткий звук, например, как в слове «film»; [ i: ] – долгий звук, к примеру, как в «sheep».</string>
    <string name="_2_bond_more"><P>4. Звук</P> «о» также имеет 2 варианта — долгий и краткий: [ ɔ ] – краткий звук, как в слове «bond»; [ ɔ: ] – долгий звук, как в слове «more».</string>
    <string name="u_u_put_u_blue"><P>5. Звук</P> «u» также может произноситься двумя способами. Он может быть долгий или краткий: [ u ] – краткий звук, как в слове «put»; [ u: ] – долгий звук, как в слове «blue».</string>
    <string name="soglsn_z"><P> Транскрипция</P> согласных звуков</string>
    <string name="r1"><P> В транскрипции</P> согласных звуков все достаточно просто. В основном они звучат подобно русскому языку. Достаточно пару раз вдумчиво взглянуть на вышеупомянутые буквосочетания, и они останутся у вас в памяти.</string>
    <string name="to_be">Глагол To Be</string>
    <string name="to_be_to_be_be_am_m_are_is_iz"> <P> При</P> помощи этого глагола To Be мы составляем простые предложения, которые в русском языке глагола не содержат. Мы говорим: я - учитель, ты - ученик… В английском языке предложения недопустимо составлять без глагола, выполняющего действие, и <b>«to be»</b> служит глаголом-связкой, обязательно ставится связка: я есть учитель, ты есть ученик, они есть англичане, дерево есть высокое, Лондон есть столица Англии… В качестве связки используются разные формы глагола <b>be: am [æm], are [ɑ:], is [iz]</b>. Когда-то и наши предки говорили: аз есмь, ты еси… В русском эти формы глагола быть исчезли, в английском они сохранились и процветают.</string>
    <string name="tr">Транскрипция</string>
    <string name="tyi"><P> <i>Транскрипция</i></P> - это запись звучания буквы или слова в виде последовательности специальных фонетических символов.</string>
    <string name="pe">Нужно ли учить транскрипцию английского языка?</string>
    <string name="_1">1. <P> Изучая</P> транскрипцию, вы изучаете правила чтения английского языка. <u> Хочешь узнать почему?</u></string>
    <string name="_2">2. Онлайн-словари не всегда удобны. <u> Хочешь узнать почему?</u></string>
    <string name="_3">3. Правильная транскрипция учит нас хорошему произношению. <u> Хочешь узнать почему?</u></string>
    <string name="t01">Несколько секретов чтения транскрипции английского языка</string>
    <string name="development_d_vel_pm_nt">*\tУдарение в транскрипции всегда ставится ПЕРЕД ударным слогом: <b>development — [dɪˈveləpmənt].</b></string>
    <string name="tea_ti">*\tДолгий гласный звук в транскрипции обозначается двоеточием: <b>tea — [tiː].</b></string>
    <string name="i_e_u_i_u_p_t_d_n_k_l_u_ai_ei_oi_au">*\tВ транскрипции английского языка есть гласные <b>(i, e, u, ʌ, i:, u:, ε:)</b> и согласные <b>(p, t, d, n, k, l и т. д.)</b> звуки, а также дифтонги — две гласные, соединяющиеся в один слог <b>(əu, ai, ei, oi, au).</b></string>
    <string name="top"><P> Начнем</P> с <b>гласных</b>. Две точки возле символа обозначают, что звук произносится долго, если точек нет, то звук следует произносить кратко. Давайте посмотрим, как гласные звуки произносятся:</string>
    <string name="i_tree_tri_free_fri">[i:] — долгий звук И: tree [triː], free [friː]</string>
    <string name="big_b_g_lip_l_p">[ɪ] — краткий звук И: big [bɪg], lip [lɪp]</string>
    <string name="book_buk_look_l_k">[ʊ] — краткий звук У: book [buk], look [lʊk]</string>
    <string name="u_root_ru_t_boot_bu_t">[u:] — долгий звук У: root [ruːt], boot [buːt]</string>
    <string name="e_hen_hen_pen_pen">[e] — звук Э. Произносится так же, как в русском языке: hen [hen], pen [pen]</string>
    <string name="mother_m_computer_k_m_pju_t">[ə] — нейтральный звук Э. Звучит, когда гласная находится не под ударением или в конце слова: mother [\'mʌðə], computer [kəm\'pjuːtə]</string>
    <string name="bird_b_d_turn_t_n">[ɜː] — звук, похожий на звук Ё в слове мЁд: bird [bɜːd], turn [tɜːn]</string>
    <string name="door_d_more_m">[ɔː] — долгий звук О: door [dɔː], more [mɔː]</string>
    <string name="cat_k_t_lamp_l_mp">[æ] — звук Э. Произносится широко: cat [kæt], lamp [læmp]</string>
    <string name="cup_k_p_but_b_t">[ʌ] — краткий звук А: cup [kʌp], but [bʌt]</string>
    <string name="a_car_k_mark_m_k">[a:] — долгий звук А: car [kɑː], mark [mɑːk]</string>
    <string name="box_b_ks_dog_d_g">[ɒ] — краткий звук О: box [bɒks], dog [dɔg]</string>
    <string name="peq2"><P> <b>Дифтонги</b></P> — это комбинации звуков, состоящие из двух гласных, произносятся всегда слитно. Расмотрим произношение дифтонгов:</string>
    <string name="here_h_near_n">[ɪə] — ИЭ: here [hɪə], near [nɪə]</string>
    <string name="e_fair_fe_bear_be">[eə] — Ээ: fair [feə], bear [beə]</string>
    <string name="go_g_no_n">[əʊ] — ЭУ (ОУ): go[gəʊ], no[nəʊ]</string>
    <string name="a_how_ha_now_na">[aʊ] — АУ: how[haʊ], now [naʊ]</string>
    <string name="sure_u_tourist_tu_r_st">[ʊə] — УЭ: sure [ʃuə], tourist [\'tuərɪst]</string>
    <string name="e_make_me_k_day_de">[eɪ] — ЭЙ: make [meɪk], day [deɪ]</string>
    <string name="a_my_ma_bike_ba_k">[aɪ] — АЙ: my [maɪ], bike [baɪk]</string>
    <string name="boy_b_toy_t">[ɔɪ] — ОЙ: : boy [bɔɪ], toy [tɔɪ]</string>
    <string name="grammar1">Grammar</string>
    <string name="what_wot"><P> Осматривая</P> комнату, покажем на какой-нибудь предмет и спросим: Это что такое? По-английски для подобного вопроса требуется слово <b>what [wot]</b> (что).</string>
    <string name="what_is_this">What is this? - Что это?</string>
    <string name="this_is_a_floor">This is a floor. - Это пол.</string>
    <string name="this_is_a_wall">This is a wall. - Это стена.</string>
    <string name="this_is_a_clock">This is a clock. - Это часы.</string>
    <string name="who"><P> Второе</P> вопросительное слово who (кто) помогает нам познакомиться с человеком, с людьми - с существами, одушевленными и, в целом, разумными.</string>
    <string name="who_is_this">Who is this? - Кто это?</string>
    <string name="who_is_he">Who is he? - Кто он?</string>
    <string name="who_is_she">Who is she? - Кто она?</string>
    <string name="qwe">Что делать, если к вам обратились с таким вопросом? Отвечать: меня зовут, предположим, Коля, Коля Булкин. А это кто? А это Тим Бейкер, мой английский друг.</string>
    <string name="who_are_you">Who are you? - Кто вы?</string>
    <string name="i_am_nick_i_am_nick_bulkin">I am Nick. I am Nick Bulkin. - Я Коля. Я Коля Булкин.</string>
    <string name="who_is_this_boy">Who is this boy? - Кто этот мальчик?</string>
    <string name="this_is_tim_baker_my_english_friend">This is Tim Baker, my English friend. - Это Тим Бейкер, мой английский друг.</string>
    <string name="who_are_they">Who are they? - Кто они?</string>
</resources>