<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="#16771B"
                android:textStyle="bold"
                android:textSize="45sp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/grammar1"/>

            <TextView
                android:textColor="#000"
                android:layout_marginHorizontal="20dp"
                android:textSize="25sp"
                android:textStyle="italic"
                android:text="@string/what_wot"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:padding="5dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#520BC4"
                android:textSize="20sp"
                android:text="@string/what_is_this"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:padding="5dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#63700D"
                android:textSize="20sp"
                android:text="@string/this_is_a_floor"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:padding="5dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#520BC4"
                android:textSize="20sp"
                android:text="@string/this_is_a_wall"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:padding="5dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#63700D"
                android:textSize="20sp"
                android:text="@string/this_is_a_clock"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:padding="9dp"
                android:scaleType="fitXY"
                android:src="@drawable/room"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:textColor="#000"
                android:layout_marginHorizontal="20dp"
                android:textSize="25sp"
                android:textStyle="italic"
                android:text="@string/who"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:padding="5dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#520BC4"
                android:textSize="20sp"
                android:text="@string/who_is_this"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:padding="5dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#63700D"
                android:textSize="20sp"
                android:text="@string/who_is_he"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:padding="5dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#520BC4"
                android:textSize="20sp"
                android:text="@string/who_is_she"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:padding="5dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#63700D"
                android:textSize="20sp"
                android:text="@string/who_are_they"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:textColor="#000"
                android:layout_marginHorizontal="20dp"
                android:textSize="25sp"
                android:textStyle="italic"
                android:text="@string/qwe"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:padding="5dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#520BC4"
                android:textSize="20sp"
                android:text="@string/who_are_you"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:padding="5dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#63700D"
                android:textSize="20sp"
                android:text="@string/i_am_nick_i_am_nick_bulkin"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:padding="5dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#520BC4"
                android:textSize="20sp"
                android:text="@string/who_is_this_boy"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:padding="5dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#63700D"
                android:textSize="20sp"
                android:text="@string/this_is_tim_baker_my_english_friend"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>